--- a/package.json
+++ b/package.json
@@ -26,20 +26,8 @@
   "dependencies": {
     "fontkit": "^1.5.4",
     "gl-matrix": "^2.3.2",
-    "image-size": "^0.5.1",
+    "image-size": "git+https://github.com/lwallent/image-size.git",
     "sax": "^1.2.2"
   },
-  "devDependencies": {
-    "@svgdotjs/svg.js": "^3.0.6",
-    "mocha": "^4.1.0",
-    "puppeteer": "^1.9.0",
-    "reify": "^0.12.3",
-    "xmldom": "^0.1.27",
-    "eslint": "^5.9.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
-  }
+  "devDependencies": {}
 }
